syntax = "proto3";

package pain.proto;

message Header {
    uint32 status = 1;
    string message = 2;
}

enum ChunkState {
    CHUNK_STATE_NONE = 0;
    CHUNK_STATE_INIT = 1;
    CHUNK_STATE_CHECKIN = 2;
    CHUNK_STATE_SEALED = 3;
}

message Location {
    string host = 1;
    uint32 port = 2;
}

message SubChunkInfo {
    string sub_chunk_id = 1;
    uint64 sub_chunk_size = 2;
    Location location = 3;
}

message ChunkInfo {
    string chunk_id = 1;
    uint64 chunk_size = 2;
    ChunkState state = 3;
    repeated SubChunkInfo sub_chunks = 4;
}

message FileInfo {
    string file_id = 1;
    uint64 file_size = 2;
    repeated ChunkInfo chunks = 3;
}
